--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,6 @@
 transformers/
 vncorenlp/
-
+.idea/
 # Created by .ignore support plugin (hsz.mobi)
 ### Python template
 # Byte-compiled / optimized / DLL files
